--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,10 +1,11 @@
 plugins {
 	id 'java-library'
+	id "org.openjfx.javafxplugin"
 }
 
 repositories {
 	maven { url 'https://jitpack.io' }
-	mavenCentral()
+	jcenter()
 }
 
 dependencies {
@@ -22,6 +23,15 @@ dependencies {
 
 	// Use JUnit Jupiter Engine for testing.
 	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.5.1'
+}
+
+javafx {
+	modules = [
+		'javafx.base',
+		'javafx.graphics',
+		'javafx.controls',
+		'javafx.fxml',
+	]
 }
 
 test {
