--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,13 @@
 plugins {
 	id 'java'
 	id 'application'
+	id 'maven'
 	id "org.openjfx.javafxplugin" version "0.0.8"
 	id "com.github.johnrengelman.shadow" version "5.2.0"
+	id 'org.jetbrains.kotlin.jvm' version '1.3.61'
 }
+
+group = "com.github.RaiderRobotix"
 
 repositories {
 	maven { url 'https://jitpack.io' }
@@ -26,6 +30,7 @@ dependencies {
 	implementation 'org.projectlombok:lombok:1.18.10'
 	annotationProcessor 'org.projectlombok:lombok:1.18.10'
 	implementation project(':data')
+	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 
 }
 
@@ -45,3 +50,16 @@ application {
 wrapper {
 	gradleVersion = '6.0'
 }
+allprojects {
+	compileKotlin {
+		kotlinOptions {
+			jvmTarget = "11"
+		}
+	}
+	compileTestKotlin {
+		kotlinOptions {
+			jvmTarget = "11"
+		}
+	}
+}
+
