--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,9 @@
 plugins {
 	id 'java'
 	id 'application'
-	id 'maven'
+	id 'idea'
 	id "org.openjfx.javafxplugin" version "0.0.8"
 	id "com.github.johnrengelman.shadow" version "5.2.0"
-	id 'org.jetbrains.kotlin.jvm' version '1.3.61'
 }
 
 group = "com.github.RaiderRobotix"
@@ -12,6 +11,11 @@ group = "com.github.RaiderRobotix"
 repositories {
 	maven { url 'https://jitpack.io' }
 	jcenter()
+}
+
+java {
+	sourceCompatibility = JavaVersion.VERSION_11
+	targetCompatibility = JavaVersion.VERSION_11
 }
 
 jar {
@@ -25,12 +29,17 @@ jar {
 	}
 }
 
+
 dependencies {
+	implementation 'com.github.hybras:Scouting-Models-2020:master-SNAPSHOT'
+	implementation 'com.github.RaiderRobotix:blue-alliance-api-java-library:master-SNAPSHOT'
 
 	implementation 'org.projectlombok:lombok:1.18.10'
 	annotationProcessor 'org.projectlombok:lombok:1.18.10'
-	implementation project(':data')
-	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+
+	implementation 'com.google.code.gson:gson:2.+'
+	implementation 'commons-io:commons-io:2.+'
+	implementation 'org.apache.commons:commons-math3:3.+'
 
 }
 
@@ -50,16 +59,3 @@ application {
 wrapper {
 	gradleVersion = '6.0'
 }
-allprojects {
-	compileKotlin {
-		kotlinOptions {
-			jvmTarget = "11"
-		}
-	}
-	compileTestKotlin {
-		kotlinOptions {
-			jvmTarget = "11"
-		}
-	}
-}
-
