--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,8 @@ plugins {
 	id 'idea'
 	id "org.openjfx.javafxplugin" version "0.0.8"
 	id "com.github.johnrengelman.shadow" version "5.2.0"
+	id 'org.jetbrains.kotlin.jvm' version '1.3.61'
+	id 'com.github.gmazzo.buildconfig' version '1.6.2'
 }
 
 group = "com.github.RaiderRobotix"
@@ -41,6 +43,14 @@ dependencies {
 	implementation 'commons-io:commons-io:2.+'
 	implementation 'org.apache.commons:commons-math3:3.+'
 
+	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+	implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.61"
+
+}
+
+buildConfig {
+	packageName "com.raiderrobotix"
+	buildConfigField 'String', 'TBA_API_KEY', project['TBA_API_KEY']
 }
 
 javafx {
@@ -58,4 +68,16 @@ application {
 
 wrapper {
 	gradleVersion = '6.0'
+}
+
+compileKotlin {
+	kotlinOptions {
+		jvmTarget = "1.8"
+	}
+}
+
+compileTestKotlin {
+	kotlinOptions {
+		jvmTarget = "1.8"
+	}
 }
