--- a/.gitignore
+++ b/.gitignore
@@ -224,4 +224,4 @@ gradle-app.setting
 
 # End of https://www.gitignore.io/api/java,linux,macos,gradle,kotlin,windows,code-java,intellij+all
 
-gradle.properties
+.settings/
