--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 plugins {
 	id 'java'
-	id 'application'
 	id 'idea'
 	id "org.openjfx.javafxplugin" version "0.0.8"
+	id 'org.beryx.jlink' version '2.17.2'
 	id "com.github.johnrengelman.shadow" version "5.2.0"
 	id 'org.jetbrains.kotlin.jvm' version '1.3.61'
 	id 'com.github.gmazzo.buildconfig' version '1.6.2'
@@ -17,8 +17,8 @@ repositories {
 }
 
 java {
-	sourceCompatibility = JavaVersion.VERSION_1_8
-	targetCompatibility = JavaVersion.VERSION_1_8
+	sourceCompatibility = JavaVersion.VERSION_11
+	targetCompatibility = JavaVersion.VERSION_11
 }
 
 jar {
@@ -57,12 +57,19 @@ buildConfig {
 }
 
 javafx {
+	version = "11"
 	modules = [
 		'javafx.base',
 		'javafx.graphics',
 		'javafx.controls',
 		'javafx.fxml',
 	]
+}
+
+jlink {
+	launcher {
+		name = 'Scouting Client'
+	}
 }
 
 application {
