--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,9 @@ dependencies {
 	implementation 'org.apache.commons:commons-math3:3.+'
 
 	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-	implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.61"
+	implementation "org.jetbrains.kotlin:kotlin-reflect"
+	testImplementation 'org.jetbrains.kotlin:kotlin-test'
+	testImplementation 'org.jetbrains.kotlin:kotlin-test-junit'
 
 }
 
@@ -74,7 +76,7 @@ jlink {
 }
 
 application {
-	mainClassName = 'org.usfirst.frc.team25.scouting.client.ui.Main'
+	mainClassName = 'org.raiderrobotix.scouting.client/org.raiderrobotix.scouting.client.ui.Main'
 }
 
 wrapper {
